--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+    
+
+:root {
+  ---Desaturated Red: hsl(0, 36%, 70%);
+  ---Soft Red: hsl(0, 93%, 68%);
+  ---Dark Grayish Red: hsl(0, 6%, 24%);
+  ---Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%);
+  ---Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%);
+}
+
+
     *::before,
     *::after {
       box-sizing: border-box;
@@ -40,8 +53,10 @@
       }
 
       body {
+        font-family: 'Josefin Sans', sans-serif;
         background-image: url(images/bg-pattern-desktop.svg);
         margin: 0px;
+        background-color:  hsl(0, 100%, 98%);
       }
 
       .Base_logo {
@@ -53,6 +68,7 @@
       .container {
         display: grid;
         grid-template-columns: 1.1fr 1fr;
+        
       }
 
 
@@ -72,16 +88,40 @@
 
       .Heading {
         text-align: center;
-        margin-top: 35px
+        text-transform: uppercase;
+        font-size: large;
+        letter-spacing: 7px;
       }
 
-      span {
-        font-size: 30px;
+
+      .content {
+        display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-items: center;
+       justify-content: center;
       }
 
-      p {
+      h1 {
+        margin-bottom: 0em;
+        font-weight: 100;
+        color: hsl(0, 36%, 70%);
+        font-size: 3em;
+      }
+
+      .sub_heading {
+        font-size: 3em;
+        display: flex;
+        flex-direction: column;
+        text-transform: uppercase;
+        font-weight: 600;
+      }
+
+      .body_paragraph {
         text-align: center;
-        padding: 0px 50px 0px 50px
+        padding: 0px 50px 0px 50px;
+        line-height: 1.5em;
+        color: hsl(0, 36%, 70%);
       }
 
       .input-form {
@@ -110,6 +150,11 @@
         height: 40px;
         border-style: solid;
       }
+
+      .Checkbox {
+        position: relative;
+        left: 2em;
+      }
       
       @media (max-width: 768px) {
        .container{
@@ -117,13 +162,14 @@
        }
        
         picture {
-          height: 400px; /* Adjust the height for mobile view cropping */
-           order: ;
+         : 24em; 
+           order: 1;
           
         }
 
         .content {
           order: 2;
+          margin-top: 50px;
         }
 
         .input-form {
@@ -137,6 +183,67 @@
         }
       }
 
-      
+      /* desktop view */
 
+      @media (min-width: 800px) {
+        .container {
+          display: grid;
+          grid-template-areas:
+        "logo picture"
+        "content picture";
+        }
+
+        .logo {
+          grid-area: logo;
+        }
+
+        .content {
+          grid-area: content;
+          margin-bottom: 14em;
+        }
+
+        picture {
+          grid-area: picture;
+          
+        }
+
+        h1 {
+          text-align: left;
+        }
+
+        .body_paragraph {
+          text-align: left;
+        }
+
+        .body_paragraph {
+          text-align: left;
+          
+        }
+      }
+      
+      @media (min-width: 1250px) {
+        .content{
+          margin: 0em 5em 16em 6em;
+        }
+        
+        .body_paragraph {
+          /* padding: 0px 200px 0px 200px; */
+        }
+
+        .logo {
+          margin: 70px 0px 0px 120px;
+        }
+
+        .Heading {
+          margin: 0em 8em 0em 0em;
+        }
+
+        span {
+          text-align: left;
+        }
+
+        .input-form {
+          margin-right: 10em;
+        }
+      }
  
